# master-thesis-dizio-ay2324

./: .coveragerc  CHANGELOG.md  README.md  inprocessing_comparison.py  package-lock.json  package.json  preprocessing_comparison.py  pyproject.toml  requirements.txt
.github/hooks/: pre-commit
.github/workflows/: check.yml  deploy.yml
docs/: _config.yml  adversarial_debiasing.md  index.md  metrics.md
docs/inprocessing/: adversarial_debiasing.md  fauci.md  prejudice_remover.md
docs/preprocessing/: disparate_impact_remover.md  learning_fair_representations.md  reweighing.md
examples/: demo_adversarial_debiasing.ipynb  demo_core_lib.ipynb  demo_disparate_impact.ipynb  demo_disparate_impact_remover.ipynb  demo_equality_of_opportunity.ipynb  demo_fauci.ipynb  demo_lfr.ipynb  demo_prejudice_remover.ipynb  demo_reweighing.ipynb  demo_statistical_parity_difference.ipynb
fairlib/: __init__.py  __main__.py  dataframe.py  in_processing.py  keras.py  logging.py  metrics.py  pre_processing.py  processing.py  utils.py
fairlib/dataframe/: __init__.py  extensions.py
fairlib/inprocessing/: __init__.py  _fauci_metrics.py  _keras_metrics.py  _torch_metrics.py  adversarial_debiasing.py  fauci.py  in_processing.py  prejudice_remover.py
fairlib/metrics/: __init__.py  _utils.py  metrics.py  metrics_utils.py
fairlib/preprocessing/: __init__.py  _lfr_model.py  disparate_impact_remover.py  lfr.py  pre-processing.py  pre_processing.py  reweighing.py  utils.py
fairlib/utils/: utils.py
tests/: __init__.py  data_generator.py  test_dataframe.py  test_examples.py  test_metrics.py  test_metrics_raw.py  test_preprocessing.py
tests/examples/: notebook_runner.py  test_demo_statistical_parity_difference.py
tests/inprocessing/: test_adversarial_debiasing.py  test_fauci.py  test_prejudice_remover.py
tests/metrics/: test_metrics_df.py  test_metrics_raw.py
tests/preprocessing/: __init__.py  test_disparate_impact_remover.py  test_lft.py  test_preprocessing.py  test_reweighing.py  test_utils.py
