[tool.poetry]
name = "fairlib"
packages = [
    { include = "fairlib" },
]
version = "2.0.1"
description = "A library that enables the use of tools suitable for improving equity in machine learning processes"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>", "Valerio Di Zio <valerio.dizio@studio.unibo.it"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.9.0,<3.13"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
keras = "^3.6.0"
torch = { version = "^2.4.1", optional = true }
tensorflow = { version = "^2.16.1", optional = true }

[tool.poetry.extras]
tf = ["tensorflow"]
torch = ["torch"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.29.0"
poetry = "^1.8.3"
pytest = "^8.2.2"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
matplotlib = "^3.9.2"
openml = "^0.15.0"
keras = "^3.6.0"
torch = { version = "^2.4.1", optional = true }
tensorflow = { version = "^2.16.1", optional = true }

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy fairlib tests"
compile = "python -m compileall fairlib tests"

[tool.poetry.scripts]
fairlib = "fairlib:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
ignore_missing_imports = true
