[tool.poetry]
name = "aequitas-fairlib"
packages = [
    { include = "fairlib" },
]
version = "2.8.2"
description = "A library for detecting and mitigating bias in machine learning models, with a focus on interoperability with scikit-learn, Pandas, and PyTorch."
authors = ["Valerio Di Zio <valerio.dizio@studio.unibo.it>", "Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10.0 <4.0.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
torch = { version = "^2.4.1", optional = true }
pytest-cov = "^6.0.0"
nbformat = "^5.10.4"
scipy = "^1.15"
numpy = "^2.1.3"

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.35.0"
poetry = "^2.0.0"
pytest = "^8.2.2"
nbformat = "^5.10.4"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
matplotlib = "^3.9.2"
openml = "^0.15.0"
torch = { version = "^2.4.1", optional = true }
black = "^25.0.0"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy fairlib tests"
compile = "python -m compileall fairlib tests"

[tool.poetry.scripts]
fairlib = "fairlib:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
